--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,4 @@
-<%= @player_1.name %>: 100HP vs. <%= @player_2.name %>: 100HP<br>
+<%= @player_1.name %>: <%= @player_1.hp %>HP vs. <%= @player_2.name %>: <%= @player_2.hp %>HP<br>
 
 <a href="/attack">
  <button type="button">attack</button> 
