--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,4 +1,4 @@
-<%= @player_1.name %> attacked <%= @player_2.name %>
+<%= $game.player1.name %> attacked <%= $game.player2.name %>
 
 <a href="/play">
  <button type="button">return</button> 
